--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
 
 script:
     - cargo build -v
-    - cargo build -v --features "use-pkg-config"
+    - cargo build -v --features "use-pkgconfig"
     - cargo test -v
     - cargo doc -v
