--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ description = "Rust bindings for TagLib"
 version = "0.2.0"
 authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
 license = "LGPL-2.1"
-repository = "https://github.com/ebassi/taglib-rust"
+repository = "https://github.com/ebassi/taglib-rust/"
 keywords = ["taglib", "media", "tags", "metadata"]
-homepage = "https://github.com/ebassi/taglib-rust"
+homepage = "http://ebassi.github.io/taglib-rust/"
+documentation = "http://ebassi.github.io/taglib-rust/docs/taglib/"
 links = "tag_c"
 build = "build.rs"
 
