Relicense under MIT/X11
While TagLib itself is LGPLv2.1/MPLv1.1, we don't need to release this
binding under the same terms. The MIT/X11 license is perfectly adequate
for a thin binding.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "taglib"
 description = "Rust bindings for TagLib"
 version = "0.2.0"
 authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
-license = "LGPL-2.1"
+license = "MIT"
 repository = "https://github.com/ebassi/taglib-rust/"
 keywords = ["taglib", "media", "tags", "metadata"]
 homepage = "http://ebassi.github.io/taglib-rust/"
