--- a/taglib-sys/Cargo.toml
+++ b/taglib-sys/Cargo.toml
@@ -4,6 +4,7 @@ description = "Raw TagLib bindings for Rust, used internally by TagLib-Rust"
 version = "0.2.0"
 authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
 repository = "https://github.com/ebassi/taglib-rust"
+license = "MIT"
 links = "tag_c"
 build = "build.rs"
 
